startpage/kubernetes/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: fuebiapp-startpage-service
  namespace: fuebiapp
  labels:
    app: fuebiapp-startpage
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: fuebiapp-startpage
