startpage/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fuebiapp-startpage-ingress
  namespace: fuebiapp
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: fuebiapp-com-tls
      hosts:
        - fuebiapp.com
  rules:
  - host: fuebiapp.com
    http:
        paths:
          - backend:
              serviceName: fuebiapp-startpage-service
              servicePort: 80
  - host: www.fuebiapp.com
    http:
        paths:
          - backend:
              serviceName: fuebiapp-startpage-service
              servicePort: 80
