startpage/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fuebiapp-startpage-ingress
  namespace: jitsi
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - secretName: tls-secret
      hosts:
        - fuebiapp.com
  rules:
  - host: fuebiapp.com
    http:
        paths:
          - backend:
              serviceName: fuebiapp-startpage-service
              servicePort: 80
